gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/extra-files/foo11453.d
version https://git-lfs.github.com/spec/v1
oid sha256:8136e7779264952a4b0e33a4e7cd65fbbecc051fbccc092eb0aefacbeed594a6
size 17
